--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.64.3",
     "react-native-web": "0.17.1",
     "expo-constants": "~12.1.3",
+    "expo-keep-awake": "~10.0.0",
     "@expo/vector-icons": "^12.0.0",
     "react-native-paper": "4.11.2"
   },
